[package]
name = "trigon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Basic
fuels = "0.66.10"
tokio = "1.42.0"
crossbeam-channel = "0.5.13"
primitive-types = "0.12.2"
dashmap = "6.1.0"
serde_json = "1.0.133"
serde = "1.0.216"
dotenvy = "0.15.7"
log = "0.4.22"
chrono = "0.4.39"
futures = "0.3.31"

# Pangea
pangea-client = "0.3.1"

# Error Handling
anyhow = "1.0.94"

# Mira Bindings
mira-v1 = { git = "https://github.com/mira-amm/mira-v1-rs" }
lazy_static = "1.5.0"



